--- a/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Views/config.appearance.html
+++ b/src/Terratype.BingMapsV8/App_Plugins/Terratype.BingMapsV8/Views/config.appearance.html
@@ -1,8 +1,8 @@
 ﻿<div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_basic" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_basicMapLabel">Standard Map:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_basicMapLabel">Standard Map:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_basicMapDescription">Do you want to see the standard map</localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_basicMapDescription">Do you want to see the standard map</localize>
         </small>
     </label>
     <div class="controls">
@@ -11,9 +11,9 @@
 </div>
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_satallite" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_satelliteMapLabel">Satellite Map:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_satelliteMapLabel">Satellite Map:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_satelliteMapDescription">Do you want to see the satellite map</localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_satelliteMapDescription">Do you want to see the satellite map</localize>
         </small>
     </label>
     <div class="controls">
@@ -22,9 +22,9 @@
 </div>
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_variety_streetview" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_streetViewMapLabel">Street View:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_streetViewMapLabel">Street View:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_streetViewDescription">Do you want to see the Street View mode</localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_streetViewDescription">Do you want to see the Street View mode</localize>
         </small>
     </label>
     <div class="controls">
@@ -33,29 +33,29 @@
 </div>
 <div class="umb-el-wrap control-group" ng-show="config().provider.variety.basic == true">
     <label for="terratype_{{identifier}}_bingmapsv8_style" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_stylingLabel">Styling:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_stylingLabel">Styling:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_stylingDescription">Predefined map styles</localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_stylingDescription">Predefined map styles</localize>
         </small>
     </label>
     <div class="controls">
         <select id="terratype_{{identifier}}_bingmapsv8_style" ng-model="config().provider.predefineStyling" class="umb-editor" ng-change="vm().provider.events.styleChange()">
-            <option value="road" terratype-translate="terratypeBingMapsV8ConfigApperance_stylingStandard"></option>
-            <option value="roadVector2" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingRoadVector2"></option>
-            <option value="canvasDark" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingDark"></option>
-            <option value="canvasLight" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingLight"></option>
-            <option value="grayscale" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingGrayScale"></option>
-            <option value="ordnanceSurvey" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingOrdnanceSurvey"></option>
-            <option value="roadVector1" terratype-translate="@terratypeBingMapsV8ConfigApperance_stylingRoadVector1"></option>
+            <option value="road" terratype-translate="terratypeBingMapsV8ConfigAppearance_stylingStandard"></option>
+            <option value="roadVector2" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingRoadVector2"></option>
+            <option value="canvasDark" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingDark"></option>
+            <option value="canvasLight" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingLight"></option>
+            <option value="grayscale" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingGrayScale"></option>
+            <option value="ordnanceSurvey" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingOrdnanceSurvey"></option>
+            <option value="roadVector1" terratype-translate="@terratypeBingMapsV8ConfigAppearance_stylingRoadVector1"></option>
         </select>
     </div>
 </div>
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_dashboard_enable" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_dashboardLabel">Navigation Control:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_dashboardLabel">Navigation Control:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_dashboardDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_dashboardDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -64,9 +64,9 @@
 </div>
 <div class="umb-el-wrap control-group" ng-show="config().provider.dashboard.enable == true">
     <label for="terratype_{{identifier}}_bingmapsv8_breadcrumb_enable" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_breadcrumbLabel">Breadcrumb:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_breadcrumbLabel">Breadcrumb:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_breadcrumbDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_breadcrumbDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -76,9 +76,9 @@
 
 <div class="umb-el-wrap control-group" ng-show="config().provider.variety.basic == true || config().provider.variety.satellite == true">
     <label for="terratype_{{identifier}}_bingmapsv8_scale_enable" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_scaleLabel">Scale:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_scaleLabel">Scale:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_scaleDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_scaleDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -88,9 +88,9 @@
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_showlabels" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_labelsLabel">Labels:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_labelsLabel">Labels:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_labelsDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_labelsDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -100,9 +100,9 @@
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_showtraffic" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_trafficLabel">Traffic:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_trafficLabel">Traffic:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_trafficDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_trafficDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -112,9 +112,9 @@
 
 <div class="umb-el-wrap control-group" ng-show="config().provider.traffic.enable == true">
     <label for="terratype_{{identifier}}_bingmapsv8_showlegendtraffic" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_trafficLegendLabel">Traffic Legend:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_trafficLegendLabel">Traffic Legend:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_trafficLegendDescription"></localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_trafficLegendDescription"></localize>
         </small>
     </label>
     <div class="controls">
@@ -124,13 +124,13 @@
 
 <div class="umb-el-wrap control-group">
     <label for="terratype_{{identifier}}_bingmapsv8_defaultlocation" class="control-label">
-        <localize key="terratypeBingMapsV8ConfigApperance_positionLabel">Default location:</localize>
+        <localize key="terratypeBingMapsV8ConfigAppearance_positionLabel">Default location:</localize>
         <small>
-            <localize key="terratypeBingMapsV8ConfigApperance_positionDescription">Select the default location when displaying this map to a content editor</localize>
+            <localize key="terratypeBingMapsV8ConfigAppearance_positionDescription">Select the default location when displaying this map to a content editor</localize>
         </small>
     </label>
     <div class="controls">
-        <ng-include src="vm().provider.events.files.views.editor.apperance">
+        <ng-include src="vm().provider.events.files.views.editor.appearance">
         </ng-include>
     </div>
 </div>
