--- a/src/Terratype.TestSite/App_Plugins/Terratype/Views/grid.overlay.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/Views/grid.overlay.html
@@ -25,7 +25,7 @@
         </label>
         <div class="controls">
             <div>
-                <ng-include src="vm().provider.events.files.views.editor.apperance">
+                <ng-include src="vm().provider.events.files.views.editor.appearance">
                 </ng-include>
             </div>
         </div>
