--- a/src/Terratype.nuget/App_Plugins/Terratype/Views/grid.html
+++ b/src/Terratype.nuget/App_Plugins/Terratype/Views/grid.html
@@ -61,7 +61,7 @@
         </div>
         <div ng-show="!view().isPreview">
             <div ng-show="config().debug != 1">
-                <ng-include src="view().provider.events.files.views.editor.apperance">
+                <ng-include src="view().provider.events.files.views.editor.appearance">
                 </ng-include>
             </div>
             <div ng-show="config().debug != 0">
