--- a/src/Terratype.nuget/App_Plugins/Terratype/Views/config.html
+++ b/src/Terratype.nuget/App_Plugins/Terratype/Views/config.html
@@ -60,20 +60,20 @@
         </section>
         <section>
             <h4 style="background-color:#dfdfdf;padding: 5px 0 5px 5px;margin-left:-5px;">
-                <localize key="terratypeConfig_apperanceHeading">Apperance</localize>
+                <localize key="terratypeConfig_appearanceHeading">Appearance</localize>
             </h4>
             <div class="umb-el-wrap control-group">
                 <label for="terratype_{{view().identifier}}_height" class="control-label">
-                    <localize key="terratypeConfig_apperanceHeightLabel">Height:</localize>
+                    <localize key="terratypeConfig_appearanceHeightLabel">Height:</localize>
                     <small>
-                        <localize key="terratypeConfig_apperanceHeightDescription">The height of the map as displayed to the content editor in pixels</localize>
+                        <localize key="terratypeConfig_appearanceHeightDescription">The height of the map as displayed to the content editor in pixels</localize>
                     </small>
                 </label>
                 <div class="controls">
-                    <input type="number" id="terratype_{{view().identifier}}_height" ng-model="config().height" class="umb-editor" localize="placeholder" placeholder="@terratypeConfig_apperanceHeightPlaceholder" />
+                    <input type="number" id="terratype_{{view().identifier}}_height" ng-model="config().height" class="umb-editor" localize="placeholder" placeholder="@terratypeConfig_appearanceHeightPlaceholder" />
                 </div>
             </div>
-            <ng-include src="view().provider.events.files.views.config.apperance">
+            <ng-include src="view().provider.events.files.views.config.appearance">
             </ng-include>
         </section>
         <section>
