--- a/src/Terratype/App_Plugins/Terratype/Views/grid.html
+++ b/src/Terratype/App_Plugins/Terratype/Views/grid.html
@@ -9,7 +9,7 @@
 
     <div ng-if="control.value && !parentScope().terratype.gridOverlay.show">
         <div ng-if="config().debug != 1">
-            <ng-include src="vm().provider.events.files.views.grid.apperance">
+            <ng-include src="vm().provider.events.files.views.grid.appearance">
             </ng-include>
         </div>
         <div ng-if="config().debug != 0">
