--- a/src/Terratype.TestSite/Views/Single4.cshtml
+++ b/src/Terratype.TestSite/Views/Single4.cshtml
@@ -1,18 +1,18 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoTemplatePage<Umbraco.Web.PublishedContentModels.Single4>
-    @using Terratype;
-    @{
-        Layout = null;
-        var jquery = false;
-        if (Request.QueryString["jquery"] != null)
-        {
-            //  Add jquery to page, this will be picked up by Terratype and used instead of native js
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"
-            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-            jquery = true;
-        }
-
+@using Terratype;
+@{
+    Layout = null;
+    var jquery = false;
+    if (Request.QueryString["jquery"] != null)
+    {
+        //  Add jquery to page, this will be picked up by Terratype and used instead of native js
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"
+                integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+                crossorigin="anonymous"></script>
+                jquery = true;
     }
+
+}
 
     <html>
     <head>
@@ -77,27 +77,40 @@
                 </div>
 
                 @Html.Terratype(new Options
-               {
-                   Provider = new Terratype.Providers.LeafletV1()
-                   {
-                       ZoomControl = new Terratype.Providers.LeafletV1.ZoomControlDefinition()
-                       {
-                           Enable = true,
-                           Position = Terratype.Providers.LeafletV1.ControlPositions.BottomRight
-                       }
-                   },
-                   MapSetId = 11,
-                   Zoom = 3,
-                   Position = new Terratype.CoordinateSystems.Wgs84("50,0"),
-                   Height = 700
-               })
+                {
+                    Provider = new Terratype.Providers.LeafletV1()
+                    {
+                        ZoomControl = new Terratype.Providers.LeafletV1.ZoomControlDefinition()
+                        {
+                            Enable = true,
+                            Position = Terratype.Providers.LeafletV1.ControlPositions.BottomRight
+                        }
+                    },
+                    MapSetId = 11,
+                    Zoom = 3,
+                    Position = new Terratype.CoordinateSystems.Wgs84("50,0"),
+                    Height = 700
 
-
-
-
-
-
-                @Html.Terratype(new Options { MapSetId = 11 }, Model.Content.Map4)
+                })
+                @Html.Terratype(
+                    new Options {
+                        MapSetId = 11,
+                        Icon = new Terratype.Models.Icon
+                        {
+                            Url = new Uri("https://d30y9cdsu7xlg0.cloudfront.net/png/4096-200.png"),
+                            Size = new Terratype.Models.Icon.SizeDefinition
+                            {
+                                Width = 48,
+                                Height = 48
+                            },
+                            Anchor = new Terratype.Models.Icon.AnchorDefinition
+                            {
+                                Horizontal = new Terratype.Models.AnchorHorizontal(Terratype.Models.AnchorHorizontal.Style.Center),
+                                Vertical = new Terratype.Models.AnchorVertical(Terratype.Models.AnchorVertical.Style.Center)
+                            }
+                        }
+                        }, 
+                    Model.Content.Map4)
                 <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
                     This is an empty div
                 </div>
@@ -106,20 +119,3 @@
         </fieldset>
     </body>
 </html>
-
-@{
-    var kmlList = new List<string>();
-}
-
-@* 
-    Given that kmlList is a list of kml values - I haven't shown how that list is created 
-    Given that Model.Content.Map is a Terratype map that exists in the model, it's position is irrelevant as it's overwritten by the kml value
-*@
-
-@foreach (var kmlEntry in kmlList)
-{
-    @Html.Terratype(new Options
-    {
-        Position = new Terratype.CoordinateSystems.Wgs84(kmlEntry),
-    }, Model.Content.Map)
-}
