--- a/src/Terratype.TestSite/Views/Single1.cshtml
+++ b/src/Terratype.TestSite/Views/Single1.cshtml
@@ -76,7 +76,7 @@
             <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
                 This is an empty div
             </div>
-            @Html.Terratype(Model.Content.Map)
+            @Html.Terratype(new Options { DomMonitorType = Options.DomMonitorTypes.JQuery }, Model.Content.Map)
             <div style="height:1000px;background-color:antiquewhite;text-align:center;vertical-align:central;">
                 This is an empty div
             </div>
