--- a/src/Terratype.TestSite/Views/Single2.cshtml
+++ b/src/Terratype.TestSite/Views/Single2.cshtml
@@ -72,7 +72,7 @@
     {
         Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
         {
-            Satellite = true
+            Satellite = false
         }
     },
     Zoom = 3,
