--- a/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
@@ -10,6 +10,8 @@
             <select id="terratype_{{identifier}}_googlemapv3_version" ng-model="config().provider.version" class="umb-editor" ng-change="vm().provider.events.versionChange()">
                 <option value="3" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3"></option>
                 <option value="3.exp" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3exp"></option>
+				<option value="3.30" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version330"></option>
+				<option value="3.29" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version329"></option>
                 <option value="3.28" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version328"></option>
                 <option value="3.27" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version327"></option>
                 <option value="3.26" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version326"></option>
