Got AutoFit working for GMaps

--- a/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.appearance.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype.GoogleMapsV3/Views/config.appearance.html
@@ -236,7 +236,7 @@
             <option value="shiftworker" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingShiftWorker"></option>
             <option value="silver" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingSilver"></option>
 			<option value="spots" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingSpots"></option>
-			<option value="turistic" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingTuristic"></option>
+			<!--<option value="turistic" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingTuristic"></option>-->
             <option value="unsaturatedbrowns" terratype-translate="@terratypeGoogleMapsV3ConfigAppearance_stylingUnsaturatedBrowns"></option>
         </select>
     </div>
