--- a/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
+++ b/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
@@ -18,218 +18,219 @@
     <title>Archetype Maps</title>
 </head>
 <body>
-    Jquery is @jquery
+	Jquery is @jquery
 
-    <h1>
-        @Model.Content.Name - Individual GMaps maps
-    </h1>
+	<h1>
+		@Model.Content.Name - Individual GMaps maps
+	</h1>
 
-    <div id="pretend-accordion" style="display:@(Request.QueryString["show1"] != null ? "display" : "none");">
+	<div id="pretend-accordion" style="display:@(Request.QueryString["show1"] != null ? "display" : "none");">
 
-        @foreach (var record in Model.Content.Archetype)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
+		@foreach (var record in Model.Content.Archetype)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
 
-            @Html.Terratype(map,
-            @<text>
-                @name is at @map.Position
-            </text>
-        )
+			@Html.Terratype(
+				map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
 
-            <br />
-        }
-    </div>
-
-
-    <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+			<br />
+		}
+	</div>
 
 
-    <h1>
-        @Model.Content.Name - Combined Gmaps maps
-    </h1>
+	<button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
 
-    <div id="pretend-accordion2" style="display:@(Request.QueryString["show2"] != null ? "display" : "none");">
-
-        @foreach (var record in Model.Content.Archetype)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
-
-            @Html.Terratype(new Options { MapSetId = 1 }, map,
-            @<text>
-                @name is at @map.Position
-            </text>
-        )
-        }
-    </div>
+	<h1>
+		@Model.Content.Name - Combined Gmaps maps
+	</h1>
 
 
-    <button onclick="var a = document.getElementById('pretend-accordion2');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+	<div id="pretend-accordion2" style="display:@(Request.QueryString["show2"] != null ? "display" : "none");">
 
-    <h1>
-        @Model.Content.Name - Combined Gmaps maps with options
-    </h1>
+		@foreach (var record in Model.Content.Archetype)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
 
-
-    <div id="pretend-accordion3" style="display:@(Request.QueryString["show3"] != null ? "display" : "none");">
-
-        @Html.Terratype(new Options
-       {
-           Provider = new Terratype.Providers.GoogleMapsV3()
-           {
-               Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
-               {
-                   Satellite = true
-               }
-           },
-           MapSetId = 2,
-           Zoom = 3,
-           Position = new Terratype.CoordinateSystems.Wgs84("50,0")
-       })
-
-        @foreach (var record in Model.Content.Archetype)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
-
-            @Html.Terratype(new Options { MapSetId = 2 }, map,
-            @<text>
-                @name is at @map.Position
-            </text>
-        )
-        }
-    </div>
+			@Html.Terratype(new Options { MapSetId = 1, AutoFit = true, AutoRecenterAfterRefresh = true }, map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+		}
+	</div>
 
 
-    <button onclick="var a = document.getElementById('pretend-accordion3');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+	<button onclick="var a = document.getElementById('pretend-accordion2');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+	<h1>
+		@Model.Content.Name - Combined Gmaps maps with options
+	</h1>
 
 
-    <h1>
-        @Model.Content.Name - Individual Leaflet maps
-    </h1>
+	<div id="pretend-accordion3" style="display:@(Request.QueryString["show3"] != null ? "display" : "none");">
 
-    <div id="pretend-accordion4" style="display:@(Request.QueryString["show1"] != null ? "display" : "none");">
+		@Html.Terratype(new Options
+		{
+			Provider = new Terratype.Providers.GoogleMapsV3()
+			{
+				Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
+				{
+					Satellite = true
+				}
+			},
+			MapSetId = 2,
+			AutoFit = true
+		})
 
-        @foreach (var record in Model.Content.Leaflet)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
+		@foreach (var record in Model.Content.Archetype)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
 
-            @Html.Terratype(map,
-                @<text>
-                    @name is at @map.Position
-                </text>
-        )
-
-            <br />
-        }
-    </div>
-
-
-    <button onclick="var a = document.getElementById('pretend-accordion4');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-
-
-    <h1>
-        @Model.Content.Name - Combined Leaflet maps
-    </h1>
-
-
-    <div id="pretend-accordion5" style="display:@(Request.QueryString["show2"] != null ? "display" : "none");">
-
-        @foreach (var record in Model.Content.Leaflet)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
-
-            @Html.Terratype(new Options { MapSetId = 10 }, map,
-        @<text>
-            @name is at @map.Position
-        </text>
-        )
-        }
-    </div>
+			@Html.Terratype(new Options { MapSetId = 2 }, map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+		}
+	</div>
 
 
-    <button onclick="var a = document.getElementById('pretend-accordion5');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-
-    <h1>
-        @Model.Content.Name - Combined Leaflet maps with options and custom icon
-    </h1>
+	<button onclick="var a = document.getElementById('pretend-accordion3');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
 
-    <div id="pretend-accordion6" style="display:@(Request.QueryString["show6"] != null ? "display" : "none");">
+	<h1>
+		@Model.Content.Name - Individual Leaflet maps
+	</h1>
 
-        @Html.Terratype(new Options
-       {
-           Provider = new Terratype.Providers.LeafletV1()
-           {
-               ZoomControl = new Terratype.Providers.LeafletV1.ZoomControlDefinition()
-               {
-                   Enable = true,
-                   Position = Terratype.Providers.LeafletV1.ControlPositions.TopLeft
-               }
-           },
-           MapSetId = 11,
-           Zoom = 4,
-           Position = new Terratype.CoordinateSystems.Wgs84("20,80"),
-           Icon = new Terratype.Models.Icon
-           {
-               Url = new Uri("https://d30y9cdsu7xlg0.cloudfront.net/png/4096-200.png"),
-               Size = new Terratype.Models.Icon.SizeDefinition
-               {
-                   Width = 48,
-                   Height = 48
-               },
-               Anchor = new Terratype.Models.Icon.AnchorDefinition
-               {
-                   Horizontal = new Terratype.Models.AnchorHorizontal(Terratype.Models.AnchorHorizontal.Style.Center),
-                   Vertical = new Terratype.Models.AnchorVertical(Terratype.Models.AnchorVertical.Style.Center)
-               }
-           }
-       })
+	<div id="pretend-accordion4" style="display:@(Request.QueryString["show1"] != null ? "display" : "none");">
 
-        @foreach (var record in Model.Content.Leaflet)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
+		@foreach (var record in Model.Content.Leaflet)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
 
-            @Html.Terratype(new Options { MapSetId = 11 }, map,
-        @<text>
-            @name is at @map.Position
-        </text>
-        )
-        }
-    </div>
+			@Html.Terratype(map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+
+			<br />
+		}
+	</div>
 
 
-    <button onclick="var a = document.getElementById('pretend-accordion6');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+	<button onclick="var a = document.getElementById('pretend-accordion4');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
 
-    <h1>
-        @Model.Content.Name - Combined Bing maps
-    </h1>
+	<h1>
+		@Model.Content.Name - Combined Leaflet maps
+	</h1>
 
 
-    <div id="pretend-accordion7" style="display:@(Request.QueryString["show7"] != null ? "display" : "none");">
+	<div id="pretend-accordion5" style="display:@(Request.QueryString["show2"] != null ? "display" : "none");">
 
-        @foreach (var record in Model.Content.Bing)
-            {
-                var name = record.GetValue<string>("name");
-                var map = record.GetValue<Terratype.Models.Model>("location");
+		@foreach (var record in Model.Content.Leaflet)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
 
-            @Html.Terratype(new Options { MapSetId = 11, Height = 800, Zoom = 5}, map,
-        @<text>
-            @name is at @map.Position
-        </text>
-        )
-        }
-    </div>
+			@Html.Terratype(new Options { MapSetId = 10 }, map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+		}
+	</div>
 
 
-    <button onclick="var a = document.getElementById('pretend-accordion7');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+	<button onclick="var a = document.getElementById('pretend-accordion5');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+	<h1>
+		@Model.Content.Name - Combined Leaflet maps with options and custom icon
+	</h1>
+
+
+	<div id="pretend-accordion6" style="display:@(Request.QueryString["show6"] != null ? "display" : "none");">
+
+		@Html.Terratype(new Options
+   {
+	   Provider = new Terratype.Providers.LeafletV1()
+	   {
+		   ZoomControl = new Terratype.Providers.LeafletV1.ZoomControlDefinition()
+		   {
+			   Enable = true,
+			   Position = Terratype.Providers.LeafletV1.ControlPositions.TopLeft
+		   }
+	   },
+	   MapSetId = 11,
+	   Zoom = 4,
+	   Position = new Terratype.CoordinateSystems.Wgs84("20,80"),
+	   Icon = new Terratype.Models.Icon
+	   {
+		   Url = new Uri("https://d30y9cdsu7xlg0.cloudfront.net/png/4096-200.png"),
+		   Size = new Terratype.Models.Icon.SizeDefinition
+		   {
+			   Width = 48,
+			   Height = 48
+		   },
+		   Anchor = new Terratype.Models.Icon.AnchorDefinition
+		   {
+			   Horizontal = new Terratype.Models.AnchorHorizontal(Terratype.Models.AnchorHorizontal.Style.Center),
+			   Vertical = new Terratype.Models.AnchorVertical(Terratype.Models.AnchorVertical.Style.Center)
+		   }
+	   }
+   })
+
+		@foreach (var record in Model.Content.Leaflet)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
+
+			@Html.Terratype(new Options { MapSetId = 11 }, map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+		}
+	</div>
+
+
+	<button onclick="var a = document.getElementById('pretend-accordion6');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+
+	<h1>
+		@Model.Content.Name - Combined Bing maps
+	</h1>
+
+
+	<div id="pretend-accordion7" style="display:@(Request.QueryString["show7"] != null ? "display" : "none");">
+
+		@foreach (var record in Model.Content.Bing)
+		{
+			var name = record.GetValue<string>("name");
+			var map = record.GetValue<Terratype.Models.Model>("location");
+
+			@Html.Terratype(new Options { MapSetId = 11, Height = 800, Zoom = 5 }, map,
+				@<text>
+					@name is at @map.Position
+				</text>
+			)
+		}
+	</div>
+
+
+	<button onclick="var a = document.getElementById('pretend-accordion7');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
 
 </body>
+
 </html>
