--- a/src/Terratype.TestSite/Views/Mappy2.cshtml
+++ b/src/Terratype.TestSite/Views/Mappy2.cshtml
@@ -33,13 +33,8 @@
         var map = record.GetPropertyValue<Terratype.Models.Model>("map");
 
         @Html.Terratype(new Options {
-       MapSetId = 1,
-       Provider = new Terratype.Providers.GoogleMapsV3()
-       {
-           ic
-       }
-
-   }, map,
+			MapSetId = 1
+		}, map,
             @<text>
                 @name is at @map.Position
             </text>
